<resources>
    <string name="app_name">ccalanedar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_icon">Task Icon</string>
    <string name="yo_cal">Yo CAL</string>
    <string name="calendar">Calendar</string>
    <string name="tasks">Tasks</string>
    <string name="create">Create</string>
    <string name="sun">Sun</string>
    <string name="sat">Sat</string>
    <string name="wed">Wed</string>
    <string name="tue">Tue</string>
    <string name="mon">Mon</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="prev">Prev</string>
    <string name="month_year">Month Year</string>
    <string name="next">Next</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="date">Date</string>
    <string name="please_write_something">Please write something</string>
    <string name="delete">delete</string>
    <string name="are_you_sure_you_want_to_delete_this">Are you sure, you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="there_is_nothing_here">There is nothing here</string>
    <string name="something_went_wrong">Something went wrong</string>
</resources>