<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/header_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/prev_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev" />

            <TextView
                android:id="@+id/month_year_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/month_year"
                android:textSize="18sp" />

            <Button
                android:id="@+id/next_month_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>

        <!-- Days of the Week -->
        <GridLayout
            android:id="@+id/days_gl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="7"
            android:padding="8dp"
            android:rowCount="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_ll">

            <!-- Define days of the week -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:text="Sun" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:text="@string/mon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:text="@string/tue" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:text="@string/wed" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:text="@string/thu" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:text="@string/fri" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:gravity="center"
                android:text="@string/sat" />

        </GridLayout>


        <GridLayout
            android:id="@+id/calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="7"
            android:padding="8dp"
            app:flow_verticalGap="10dp"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/days_gl" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>